Remove use of deprecated Globals.SUBJECT_ATTR.